# meta-fungible-app-tutorial

./: Cargo.toml  README.md
src/: contract.rs  lib.rs  service.rs  state.rs
