[package]
name = "meta-fungible"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.2", default-features = false }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
fungible = { path = "../fungible-app-tutorial"}
linera-sdk = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"

[dev-dependencies]
linera-sdk = { version = "0.10.1", features = ["test"] }
webassembly-test = "0.1.0"

[[bin]]
name = "meta_fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "meta_fungible_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
